TEST_PROGRAMS/VALID/eric_ditomasso/exponent.min
# calculate the value of x^n, where n is an integer

var x: float;
var n: int;
var result: float;

read x;
read n;
result = 1.0;

if n then
	if x then
		while n do
			result = result*x;
			n = n - 1;
		done
		print result;
	else
		print 0;
	endif
else
	print 1;
endif
