TEST_PROGRAMS/INVALID/luke_emery-fertitta/parse_nonexpr.min
# parsing error example - using a statment where an expression is needed

var x: int;

if x = 0 then
	x = 1;
endif
